THIS IS MY FIRST COMMIT

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
 --clr-Dark: #222831;
   --clr-Grey: #393E46;
   --clr-accent: #00ADB5; */
+/* 
+--clr-Dark: #222831;
+  --clr-Grey: #393E46;
+  --clr-accent: #00ADB5; */
 * {
   margin: 0;
   padding: 0;
