uptade on the portfolio

--- a/src/App.css
+++ b/src/App.css
@@ -264,7 +264,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Banner Css ************/
 .banner {
   margin-top: 0;
-  padding: 260px 0 100px 0;
+  padding: 200px 0 150px 0;
   /* background-image: url("./assets/img/banner-bg.png"); */
   background-position: top center;
   background-size: cover;
@@ -522,7 +522,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Contact Css ************/
 .contact {
-  background: linear-gradient(90.21deg, #00adb5 -5.91%, #4a2fbd 111.58%);
   padding: 60px 0 200px 0;
 }
 .contact img {
@@ -549,7 +548,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form input:focus,
 .contact form textarea:focus {
-  background: rgba(255, 255, 255, 1);
+  background: linear-gradient(90.21deg, #00adb5 -5.91%, #4a2fbd 111.58%);
   color: #121212;
 }
 .contact form input::placeholder,
@@ -565,25 +564,27 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .contact form button {
   font-weight: 700;
-  color: #000;
-  background-color: #fff;
+  color: #fff;
+  background: linear-gradient(90.21deg, #00adb5 -5.91%, #4a2fbd 111.58%);
   padding: 14px 48px;
   font-size: 18px;
   margin-top: 25px;
   border-radius: 0;
   position: relative;
   transition: 0.3s ease-in-out;
+  border-radius: 15px;
 }
 .contact form button span {
   z-index: 1;
   position: relative;
 }
 .contact form button:hover {
-  color: #fff;
+  color: #00adb5;
+  border-radius: 15px;
 }
 .contact form button::before {
   content: "";
-  background: #121212;
+  background: #fff;
   width: 0;
   height: 100%;
   position: absolute;
@@ -591,6 +592,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   left: 0;
   z-index: 0;
   transition: 0.3s ease-in-out;
+  border-radius: 15px;
 }
 .contact form button:hover::before {
   width: 100%;
