--- a/src/App.css
+++ b/src/App.css
@@ -707,3 +707,69 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
+.banner-Third-person {
+  margin-top: 0;
+  padding: 200px 0 150px 0;
+  /* background-image: url("./assets/img/unity.jpg"); */
+  background-position: center;
+  text-align: center;
+  background-repeat: no-repeat;
+}
+
+.section__subtittle_intro {
+  display: inline-block;
+  background-color: cyan;
+  padding: 0.25em 1em;
+  margin-bottom: 1em;
+}
+
+.intro__img {
+  grid-area: img;
+  min-width: 250px;
+  position: relative;
+  z-index: 2;
+}
+
+/************ thirdperson box ************/
+
+/* .project-items {
+  padding: 0 0 50px 0;
+  position: relative;
+}
+.project-bx {
+  background: #151515;
+  border-radius: 64px;
+  text-align: center;
+  padding: 60px 80px;
+  margin-top: -60px;
+  width: 100%;
+}
+.project h2 {
+  font-size: 45px;
+  font-weight: 700;
+}
+.project p {
+  color: #ffffff;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+  line-height: 1.5em;
+  margin: 14px 0 75px 0;
+}
+.project-slider {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+.project-slider .item {
+  height: 300px;
+  width: 300px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0 auto 15px auto;
+} */
